--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "init-project": "npm install && npm-run-all init:*",
         "init:dirs": "mkdirp dist src/sass src/css src/vendor src/images src/js",
-        "init:dirs-sass": "mkdirp src/sass/sections mkdirp src/sass/pages src/sass/components",
+        "init:dirs-sass": "mkdirp src/sass/sections src/sass/pages src/sass/components",
         "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js src/styleguide.html",
         "init:files-sass": "touch src/sass/_layout.scss src/sass/_mixins.scss src/sass/_normalize.scss src/sass/_variables.scss",
         "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
